# ais-global-fishing

./: .coverage  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  GLOBALFISHING_WATCH_API_KEY=YOUR_SUPER_SECRET_TOKEN  LICENSE  README.md  example_bulk_vessels.py  example_encounters.py  example_events.py  example_port_visits.py  example_risk.py  example_search_advanced.py  example_track.py  example_trips.py  example_usage.py  gfw_client.py  gfw_client_lib.py  mkdocs.yml  pip install -r requirements.txt          # requests, python-dotenv, mkdocs-material (optional)  print(identity["registryInfo"][0]["shipname"])  pyproject.toml  python example_track.py  python example_usage.py  requirements.txt  run_examples.sh  setup_docs.sh  vessel_finder.py  vessel_search.py  vessels_api.py
ais_global_fishing/: __init__.py  __main__.py  gfw_client_lib.py
docs/: api_reference.md  cli_usage.md  examples.md  getting_started.md  index.md  usage.md
examples/: example_bulk_vessels.py  example_events.py  example_port_visits.py  example_search_advanced.py  example_track.py  example_usage.py  vessel_finder.py
python examples/: <script>.py
tests/: conftest.py  test_cli.py  test_client.py
