[project]
name = "ais-global-fishing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gfw-api-python-client>=1.0.1",
    "httpx>=0.28.1",
    "mkdocs-material>=9.6.13",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

