[project]
name = "ais-global-fishing"
version = "0.1.0"
description = "A Python client for the Global Fishing Watch Gateway v3 API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Peter Rosemann", email = "dkdndes@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "mkdocs>=1.6.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.13",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "pymdown-extensions>=10.7.0",
]

[project.urls]
Homepage = "https://github.com/dkdndes/ais-global-fishing"
Issues = "https://github.com/dkdndes/ais-global-fishing/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ais_global_fishing"]

[project.scripts]
gfw = "ais_global_fishing.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["ais_global_fishing"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

